Bug 163359 - TSA URLs are duplicated if a certificate is chosen twice in the Export as PDF dialog.
Summary: TSA URLs are duplicated if a certificate is chosen twice in the Export as PDF...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium minor
Assignee: Eloi Montañés
URL:
Whiteboard: target:25.2.0 target:24.8.3
Keywords:
Depends on:
Blocks: PDF-Export
  Show dependency treegraph
 
Reported: 2024-10-09 06:41 UTC by Eloi Montañés
Modified: 2026-02-07 15:16 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Eloi Montañés 2024-10-09 06:41:33 UTC
Description:
If a user selects a certificate in the "Digital Signatures" tab of the "Export as PDF..." dialog, and then selects another one or the same one again, the entries on the "Time Stamp Authority" field are appended again.

Steps to Reproduce:
1. Have one or more TSA URLs in the Security section of LibreOffice options.
2. Have one or more Certificates in your certificate manager.
3. Open the "Export as PDF..." dialog in any LibreOffice component that supports it (for example, Writer or Draw)
4. In the "Digital Signatures" tab, select a certificate.
4.1 (Check that there is only one instance of the TSA URLs in the "Time Stamp Authority" field)
5. Select another or the same certificate again.
5.1 (Check that there is two instances of the TSA URLs in the "Time Stamp Authority" field)
Steps 5 and 5.1 can be repeated as many times as the user wants.

Actual Results:
There is only once instance of the TSA URLs in the "Time Stamp Authority" field.

Expected Results:
There is as many instances of the TSA URLs as certificates the user has chosen.


Reproducible: Always


User Profile Reset: No

Additional Info:
One of the affected versions:
Version: 24.8.2.1 (X86_64) / LibreOffice Community
Build ID: 0f794b6e29741098670a3b95d60478a65d05ef13
CPU threads: 16; OS: Linux 6.8; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 1 Eloi Montañés 2024-10-09 07:00:09 UTC
Note: The expected results and actual results in the bug description are swapped. Pardon the confusion.
Comment 2 Commit Notification 2024-10-10 05:20:52 UTC
Eloi Montañés committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/12407f0668b042f5cbdffbddf65dc864c809d180

tdf#163359: Fix duplication of TSA URLs on Signing Dialog

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2024-10-14 02:05:59 UTC
Eloi Montañés committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/c6a2014aeb60fa14f9ff3bebccd358f2a55ce0be

tdf#163359: Fix duplication of TSA URLs on Signing Dialog

It will be available in 24.8.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.